--- a/ShowMediaPlayer/Output.resx
+++ b/ShowMediaPlayer/Output.resx
@@ -117,18 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="VLC.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="VLC.VlcLibDirectory" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5BeEhvc3QrU3RhdGUBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAgwEAAAIB
-        AAAAAQAAAAAAAAAAAAAAAG4BAAAHAAAAKABDAG8AdQBuAHQAKQADAA0AAAAIAAAAQQB1AHQAbwBMAG8A
-        bwBwAAsAAAAIAAAAQQB1AHQAbwBQAGwAYQB5AAsAAAAJAAAAQgBhAGMAawBDAG8AbABvAHIAAwAAAAAA
-        BwAAAEIAYQBzAGUAVQBSAEwACAAAAAAACAAAAEIAcgBhAG4AZABpAG4AZwALAAAADAAAAEUAeAB0AGUA
-        bgB0AEgAZQBpAGcAaAB0AAMA+hoAAAsAAABFAHgAdABlAG4AdABXAGkAZAB0AGgAAwBaHQAAEQAAAEYA
-        dQBsAGwAcwBjAHIAZQBlAG4ARQBuAGEAYgBsAGUAZAALAAAAAwAAAE0AUgBMAAgAAAAAAAkAAABTAHQA
-        YQByAHQAVABpAG0AZQADAAAAAAAHAAAAVABvAG8AbABiAGEAcgALAAAABwAAAFYAaQBzAGkAYgBsAGUA
-        CwAAAAYAAABWAG8AbAB1AG0AZQADAGQAAAAL
+        AAEAAAD/////AQAAAAAAAAAEAQAAABdTeXN0ZW0uSU8uRGlyZWN0b3J5SW5mbwIAAAAMT3JpZ2luYWxQ
+        YXRoCEZ1bGxQYXRoAQEGAgAAAB1DOlxQcm9ncmFtIEZpbGVzXFZpZGVvTEFOXFZMQwkCAAAACw==
 </value>
   </data>
 </root>
